# layered-crate

./: Cargo.toml  README.md  Taskfile.yml
.github/workflows/: build.yml  pr.yml  release.yml
src/: cargo_toml.rs  checker.rs  graph.rs  import.rs  layerfile.rs  layers.rs  lib.rs  main.rs  syntax.rs  util.rs
tests/expand/: import_macro.expanded.rs  import_macro.rs  import_self.expanded.rs  import_self.rs  propagates_cfg.expanded.rs  propages_cfg_off.expanded.rs  propages_cfg_off.rs  propages_cfg_on.expanded.rs  propages_cfg_on.rs
tests/fixtures/src/: api.rs  sub_system_2.rs
tests/fixtures/src/sub_system_1/: bar.rs  foo.rs  mod.rs
tests/fixtures/tests/: import_test.rs
tests/ui/: cir_deps.fail.stderr  cir_deps_itself.fail.stderr  dep_not_found.fail.stderr  import_macro_order1.fail.rs  import_macro_order1.fail.stderr  import_macro_order2.fail.rs  import_macro_order2.fail.stderr  import_root_errors.fail.rs  import_root_errors.fail.stderr  import_self_style.fail.stderr  module_order.fail.stderr
