[package]
name = "layered-crate"
version = "0.4.0"
edition = "2024"
description = "Tool to declare and verify internal dependencies amongst modules inside a crate"
repository = "https://github.com/Pistonite/layered-crate"
license = "MIT"
authors = ["Pistonight <pistonknight@outlook.com>"]
keywords = ["layered", "crate", "dependencies", "module"]
categories = ["rust-patterns", "development-tools", "development-tools::build-utils", "development-tools::testing"]
exclude = [
    ".github/**/*",
    "tests/**/*",
    "README.md",
    "Taskfile.yml"
]

[dependencies.cu]
package = "pistonite-cu"
version = "0.3.2"
features = ["cli", "process", "toml"]

[dependencies.pm]
package = "pistonite-pm"
version = "0.1.1"
default-features = false
features = ["full"]

[dependencies]
regex = "1.11.1"
serde = "1"

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWThJQKJaXayoZBe0YV5LV4KFkQwcqQ6Fg9dJBz18JnpHGdf/cHUyKs+"
