[package]
name = "layered-crate"
version = "0.4.1"
edition = "2024"
description = "Tool to declare and verify internal dependencies amongst modules inside a crate"
repository = "https://github.com/Pistonite/layered-crate"
license = "MIT"
authors = ["Pistonight <pistonknight@outlook.com>"]
keywords = ["layered", "crate", "dependencies", "module"]
categories = ["rust-patterns", "development-tools", "development-tools::build-utils", "development-tools::testing"]
exclude = [
    ".github/**/*",
    "tests/**/*",
    "README.md",
    "Taskfile.yml"
]

[dependencies.cu]
package = "pistonite-cu"
version = "0.5.0"
features = ["cli", "process", "toml", "json"]
# path = "../cu/packages/copper"

[dependencies.pm]
package = "pistonite-pm"
version = "0.1.2"
default-features = false
features = ["full"]

[dependencies]
serde = "1"

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWThJQKJaXayoZBe0YV5LV4KFkQwcqQ6Fg9dJBz18JnpHGdf/cHUyKs+"
